--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -28,6 +28,7 @@ executable cabasa
   hs-source-dirs:      app
   main-is:             Main.hs
   other-modules:       Paths_cabasa
+                     , Canvas
                      , Hint
                      , Types
   default-language:    Haskell2010
