--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -29,6 +29,7 @@ executable cabasa
   main-is:             Main.hs
   other-modules:       Paths_cabasa
                      , Canvas
+                     , Common
                      , Hint
                      , Types
   default-language:    Haskell2010
