--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -33,6 +33,7 @@ executable cabasa
                      , ControlButtons
                      , Hint
                      , Types
+                     , SetRuleWindow
   default-language:    Haskell2010
   build-depends:       base    >= 4.7      && < 5
                      , cabasa
