--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -32,6 +32,7 @@ executable cabasa
                      , Common
                      , ControlButtons
                      , Hint
+                     , Menu
                      , Types
                      , SetRuleWindow
   default-language:    Haskell2010
