--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -35,6 +35,7 @@ executable cabasa
                      , Menu
                      , Types
                      , SetRuleWindow
+                     , StylesheetWindow
   default-language:    Haskell2010
   build-depends:       base    >= 4.7      && < 5
                      , cabasa
