--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -35,11 +35,15 @@ executable cabasa
                      , Menu
                      , Types
                      , SetRuleWindow
+                     , Settings
+                     , SettingsDialog
+                     , ShowDialog
                      , StylesheetWindow
   default-language:    Haskell2010
   build-depends:       base             >= 4.7  && < 5
                      , cabasa
                      , cellular-automata
+                     , aeson            >= 1.3  && < 1.4
                      , cairo            >= 0.13 && < 0.14
                      , comonad          >= 5.0  && < 5.1
                      , directory        >= 1.3  && < 1.4
@@ -54,3 +58,4 @@ executable cabasa
                      , template-haskell >= 2.12 && < 2.14
                      , temporary        >= 1.2  && < 1.4
                      , text             >= 1.2  && < 1.3
+                     , yaml             >= 0.8  && < 0.9
