--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -29,7 +29,6 @@ executable cabasa
   main-is:             Main.hs
   other-modules:       Paths_cabasa
                      , Canvas
-                     , Common
                      , ControlButtons
                      , Hint
                      , Menu
@@ -39,6 +38,7 @@ executable cabasa
                      , SettingsDialog
                      , ShowDialog
                      , StylesheetWindow
+                     , Utils
   default-language:    Haskell2010
   build-depends:       base             >= 4.7  && < 5
                      , cabasa
