--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -21,6 +21,7 @@ library
   hs-source-dirs:      hint-interop
   build-depends:       base >= 4.7  && < 5
                      , cellular-automata
+                     , MonadRandom >= 0.5 && < 0.6
 
 executable cabasa
   -- from https://making.pusher.com/top-tips-and-tools-for-optimising-haskell/
@@ -45,7 +46,6 @@ executable cabasa
                      , cellular-automata
                      , aeson            >= 1.3  && < 1.4
                      , cairo            >= 0.13 && < 0.14
-                     , comonad          >= 5.0  && < 5.1
                      , directory        >= 1.3  && < 1.4
                      , filepath         >= 1.4  && < 1.5
                      , finite-typelits  >= 0.1  && < 0.2
@@ -53,6 +53,7 @@ executable cabasa
                      , hint             >= 0.7  && < 0.9
                      , microlens        >= 0.4  && < 0.5
                      , microlens-th     >= 0.4  && < 0.5
+                     , MonadRandom      >= 0.5  && < 0.6
                      , process          >= 1.6  && < 1.7
                      , split            >= 0.2  && < 0.3
                      , template-haskell >= 2.12 && < 2.14
