--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -44,6 +44,7 @@ executable cabasa
   build-depends:       base             >= 4.7  && < 5
                      , cabasa
                      , cellular-automata
+                     , cellular-automata-alpaca
                      , aeson            >= 1.3  && < 1.4
                      , cairo            >= 0.13 && < 0.14
                      , directory        >= 1.3  && < 1.4
