--- a/stack.yaml
+++ b/stack.yaml
@@ -40,7 +40,8 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- ../cellular-automata
+- ../cellular-automata/cellular-automata
+- ../cellular-automata/cellular-automata-alpaca
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
