--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -11,7 +11,7 @@ homepage:            https://github.com/bradrn/cabasa
 license:             MIT
 license-file:        LICENSE
 author:              Brad Neimann
-copyright:           2017 Brad Neimann
+copyright:           (c) 2017-2019 Brad Neimann
 build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
