--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -51,6 +51,7 @@ executable cabasa
                      , cellular-automata
                      , cellular-automata-alpaca
                      , aeson            >= 1.3  && < 1.4
+                     , array            >= 0.5  && < 0.6
                      , cairo            >= 0.13 && < 0.14
                      , directory        >= 1.3  && < 1.4
                      , filepath         >= 1.4  && < 1.5
