--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -27,6 +27,7 @@ library
   build-depends:       base >= 4.7  && < 5
                      , cellular-automata
                      , MonadRandom >= 0.5 && < 0.6
+                     , array >= 0.5 && < 0.6
 
 executable cabasa
   -- from https://making.pusher.com/top-tips-and-tools-for-optimising-haskell/
