Convert to use gi-gtk
The gtk2hs README now suggests using gi-gtk for all new projects.

Additionally, gtk2hs is not available in any new Stackage resolvers,
meaning that the resolver version cannot be updated unless gi-gtk is used.

--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -57,14 +57,20 @@ executable cabasa
                      , directory        >= 1.3  && < 1.4
                      , filepath         >= 1.4  && < 1.5
                      , finite-typelits  >= 0.1  && < 0.2
-                     , gtk3             >= 0.14 && < 0.15
+                     , gi-cairo         >= 1.0  && < 1.1
+                     , gi-gdk           >= 3.0  && < 3.1
+                     , gi-gtk           >= 3.0  && < 3.1
+                     , gi-gtk-hs        >= 0.3  && < 0.4
+                     , haskell-gi-base  >= 0.21 && < 0.22
                      , hint             >= 0.7  && < 0.9
                      , microlens        >= 0.4  && < 0.5
                      , microlens-th     >= 0.4  && < 0.5
                      , MonadRandom      >= 0.5  && < 0.6
                      , process          >= 1.6  && < 1.7
                      , split            >= 0.2  && < 0.3
+                     , text             >= 1.2  && < 1.3
                      , template-haskell >= 2.12 && < 2.14
                      , temporary        >= 1.2  && < 1.4
                      , text             >= 1.2  && < 1.3
+                     , transformers     >= 0.5  && < 0.6
                      , yaml             >= 0.8  && < 0.9
