--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -36,6 +36,7 @@ executable cabasa
   main-is:             Main.hs
   other-modules:       Paths_cabasa
                      , Canvas
+                     , Control.Monad.App
                      , ControlButtons
                      , Hint
                      , Menu
@@ -66,6 +67,7 @@ executable cabasa
                      , microlens        >= 0.4  && < 0.5
                      , microlens-th     >= 0.4  && < 0.5
                      , MonadRandom      >= 0.5  && < 0.6
+                     , mtl              >= 2.2  && < 2.3
                      , process          >= 1.6  && < 1.7
                      , split            >= 0.2  && < 0.3
                      , text             >= 1.2  && < 1.3
