Separate MonadApp class into its own module

--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -37,6 +37,7 @@ executable cabasa
   other-modules:       Paths_cabasa
                      , Canvas
                      , Control.Monad.App
+                     , Control.Monad.App.Class
                      , ControlButtons
                      , Hint
                      , Menu
