Move event handlers into separate module

--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -39,6 +39,7 @@ executable cabasa
                      , Control.Monad.App
                      , Control.Monad.App.Class
                      , ControlButtons
+                     , Handlers
                      , Hint
                      , Menu
                      , Types
