Split Types module into Application+other types

--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -43,6 +43,7 @@ executable cabasa
                      , Hint
                      , Menu
                      , Types
+                     , Types.Application
                      , SetRuleWindow
                      , Settings
                      , SettingsDialog
