--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -54,6 +54,7 @@ executable cabasa
                      , haskell-gi-base  >= 0.21 && < 0.24
                      , microlens        >= 0.4  && < 0.5
                      , microlens-th     >= 0.4  && < 0.5
+                     , microlens-mtl    >= 0.2  && < 0.3
                      , MonadRandom      >= 0.5  && < 0.6
                      , mtl              >= 2.2  && < 2.3
                      , process          >= 1.6  && < 1.7
