--- a/cabasa.cabal
+++ b/cabasa.cabal
@@ -42,6 +42,7 @@ library
                      , array            >= 0.5  && < 0.6
                      , cairo            >= 0.13 && < 0.14
                      , directory        >= 1.3  && < 1.4
+                     , deepseq          >= 1.4  && < 1.5
                      , filepath         >= 1.4  && < 1.5
                      , finite-typelits  >= 0.1  && < 0.2
                      , gi-cairo         >= 1.0  && < 1.1
